--- a/css/pages/view.css
+++ b/css/pages/view.css
@@ -90,7 +90,15 @@ button.delete {
 button:hover {
   opacity: 0.8;
 }
-
+#statusSelect{
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
 /* ✅ تحسين الـ Responsive عند 768px */
 @media (max-width: 768px) {
   .sidebar {
