--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -136,10 +136,10 @@ li:after {
 
 img {
     margin: 0 auto;
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
+   border-radius: 25px;
+    width: 100px;
     height: auto;
+     background-color: var(--Denim);
    
 }
 
@@ -839,6 +839,7 @@ html.show-menu body {
     margin-bottom: 2rem;
     line-height: 1.5;
     font-size: var(--p-xs-size);
+    visibility: hidden;
 }
 
 .form-group {
